// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google maps renders a map with percentage of parent units renders the structure correctly 1`] = `
<LoadScript
  googleMapsApiKey=""
  id="_com.mendix.widget.custom.Maps.Maps"
  onLoad={[Function]}
  version="weekly"
>
  <div
    className="widget-maps"
    style={
      Object {
        "height": "75%",
        "width": "50%",
      }
    }
  >
    <div
      className="widget-google-maps-wrapper"
    >
      <div
        className="widget-google-maps"
      />
    </div>
  </div>
</LoadScript>
`;

exports[`Google maps renders a map with percentage of width and height units renders the structure correctly 1`] = `
<LoadScript
  googleMapsApiKey=""
  id="_com.mendix.widget.custom.Maps.Maps"
  onLoad={[Function]}
  version="weekly"
>
  <div
    className="widget-maps"
    style={
      Object {
        "height": "auto",
        "paddingBottom": "37.5%",
        "width": "50%",
      }
    }
  >
    <div
      className="widget-google-maps-wrapper"
    >
      <div
        className="widget-google-maps"
      />
    </div>
  </div>
</LoadScript>
`;

exports[`Google maps renders a map with pixels renders structure correctly 1`] = `
<LoadScript
  googleMapsApiKey=""
  id="_com.mendix.widget.custom.Maps.Maps"
  onLoad={[Function]}
  version="weekly"
>
  <div
    className="widget-maps"
    style={
      Object {
        "height": "75px",
        "width": "50px",
      }
    }
  >
    <div
      className="widget-google-maps-wrapper"
    >
      <div
        className="widget-google-maps"
      />
    </div>
  </div>
</LoadScript>
`;

exports[`Google maps renders a map with right structure 1`] = `
<LoadScript
  googleMapsApiKey=""
  id="_com.mendix.widget.custom.Maps.Maps"
  onLoad={[Function]}
  version="weekly"
>
  <div
    className="widget-maps"
    style={
      Object {
        "height": "37.5px",
        "width": "50px",
      }
    }
  >
    <div
      className="widget-google-maps-wrapper"
    >
      <div
        className="widget-google-maps"
      />
    </div>
  </div>
</LoadScript>
`;
